// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/DatePicker ClickCalendarButton play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2h:"
           class="LabelWithHelp_label__59tP-"
           for="datepickerInputId-:r2g:"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_date_container__1t6qM ">
      <input id="datepickerInputId-:r2g:"
             class="DatePicker_input__vz7zh"
             placeholder="Velg"
             value
      >
      <button class="DatePicker_calendarButton__6sCKL"
              aria-expanded="true"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r2i:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r2i:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r2f:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div class="DatePicker_calendar_container__yXMoR">
      TODO - FRONT-1346 Her kommer kalendervisning
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker Defaults play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rf:"
           class="LabelWithHelp_label__59tP-"
           for="datepickerInputId-:re:"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_date_container__1t6qM ">
      <input id="datepickerInputId-:re:"
             class="DatePicker_input__vz7zh"
             placeholder="Velg"
             value
      >
      <button class="DatePicker_calendarButton__6sCKL"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rg:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rg:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:rd:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div class="dummyClassname"
       lang="nb"
  >
    <label id="labelId-:r6:"
           class="LabelWithHelp_label__59tP-"
           for="htmlid"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_date_container__1t6qM ">
      <input id="htmlid"
             class="DatePicker_input__vz7zh"
             data-testid="123ID"
             placeholder="Velg"
             value
      >
      <button class="DatePicker_calendarButton__6sCKL"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r7:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r7:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r4:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker WithAutoCompleteNameAndPlaceholder play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r22:"
           class="LabelWithHelp_label__59tP-"
           for="datepickerInputId-:r21:"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_date_container__1t6qM ">
      <input id="datepickerInputId-:r21:"
             class="DatePicker_input__vz7zh"
             autocomplete="given-name"
             name="test_name"
             placeholder="01.01.2001"
             value
      >
      <button class="DatePicker_calendarButton__6sCKL"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r23:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r23:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r20:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker WithCustomClassNames play-test 1`] = `
<div data-test-block="true">
  <div class="dummyClassname">
    <label id="labelId-:ra:"
           class="LabelWithHelp_label__59tP-   dummyClassname"
           for="datepickerInputId-:r9:"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_date_container__1t6qM dummyClassnameFormContainer">
      <input id="datepickerInputId-:r9:"
             class="DatePicker_input__vz7zh"
             placeholder="Velg"
             aria-describedby="datepickerErrorId-:r8:"
             aria-invalid="true"
             value
      >
      <button class="DatePicker_calendarButton__6sCKL"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rb:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rb:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r8:"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="ErrorMessage_errorMessage__508oW dummyClassname">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo ErrorMessage_errorMessageIcon__2N-Qa"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 13h-2V7h2v6Zm0 4h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
        <p class="ErrorMessage_errorMessageText__e27TU">
          Fødselsdato er obligatorisk
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker WithDefaultValue play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rv:"
           class="LabelWithHelp_label__59tP-"
           for="datepickerInputId-:ru:"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_date_container__1t6qM ">
      <input id="datepickerInputId-:ru:"
             class="DatePicker_input__vz7zh"
             placeholder="Velg"
             value="01.01.2001"
      >
      <button class="DatePicker_calendarButton__6sCKL"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r10:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r10:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:rt:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker WithDescription play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1k:"
           class="LabelWithHelp_label__59tP-"
           for="datepickerInputId-:r1j:"
    >
      Fødselsdato
    </label>
    <div class="Help_description__niabw">
      En liten beskrivelse tekst
    </div>
    <div class="DatePicker_date_container__1t6qM ">
      <input id="datepickerInputId-:r1j:"
             class="DatePicker_input__vz7zh"
             placeholder="Velg"
             value
      >
      <button class="DatePicker_calendarButton__6sCKL"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1l:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1l:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r1i:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker WithDisabled play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rn:"
           class="LabelWithHelp_label__59tP-"
           for="datepickerInputId-:rm:"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_date_container__1t6qM ">
      <input id="datepickerInputId-:rm:"
             class="DatePicker_input__vz7zh"
             disabled
             placeholder="Velg"
             value="01.01.2001"
      >
      <button class="DatePicker_calendarButton__6sCKL"
              disabled
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:ro:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:ro:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:rl:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker WithError play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1b:"
           class="LabelWithHelp_label__59tP-"
           for="datepickerInputId-:r1a:"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_date_container__1t6qM ">
      <input id="datepickerInputId-:r1a:"
             class="DatePicker_input__vz7zh"
             placeholder="Velg"
             value
      >
      <button class="DatePicker_calendarButton__6sCKL"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1c:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1c:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r19:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker WithErrorMessageAndHasError play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1f:"
           class="LabelWithHelp_label__59tP-"
           for="datepickerInputId-:r1e:"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_date_container__1t6qM ">
      <input id="datepickerInputId-:r1e:"
             class="DatePicker_input__vz7zh"
             placeholder="Velg"
             aria-describedby="datepickerErrorId-:r1d:"
             aria-invalid="true"
             value
      >
      <button class="DatePicker_calendarButton__6sCKL"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1g:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1g:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r1d:"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="ErrorMessage_errorMessage__508oW ">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo ErrorMessage_errorMessageIcon__2N-Qa"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 13h-2V7h2v6Zm0 4h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
        <p class="ErrorMessage_errorMessageText__e27TU">
          Fødselsdato er obligatorisk
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker WithEventHandlers play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2d:"
           class="LabelWithHelp_label__59tP-"
           for="datepickerInputId-:r2c:"
    >
      Form-element har blitt blurret
    </label>
    <div class="DatePicker_date_container__1t6qM ">
      <input id="datepickerInputId-:r2c:"
             class="DatePicker_input__vz7zh"
             placeholder="Velg"
             value
      >
      <button class="DatePicker_calendarButton__6sCKL"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r2e:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r2e:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r2b:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker WithHelpText play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1o:"
           class="LabelWithHelp_label__59tP-"
           for="datepickerInputId-:r1n:"
    >
      Fødselsdato
    </label>
    <button class="IconButton_button__mw9sG IconButton_button_extraSmall__3+QfY IconButton_button_outlined__aDbNH Help_helpButton__I0E-6"
            type="button"
            aria-describedby="labelId-:r1o:"
            aria-expanded="true"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r1p:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r1p:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="Help_helpBox__nbhjO">
      <span class="Help_helpBoxText__j6sH7">
        Hjelpetekst
      </span>
      <button class="IconButton_button__mw9sG IconButton_button_small__etst4  Help_helpBoxCloseButton__RueX2"
              type="button"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1r:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1r:">
            Lukk
          </title>
          <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
          </path>
        </svg>
      </button>
    </div>
    <div class="DatePicker_date_container__1t6qM ">
      <input id="datepickerInputId-:r1n:"
             class="DatePicker_input__vz7zh"
             placeholder="Velg"
             value
      >
      <button class="DatePicker_calendarButton__6sCKL"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1q:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1q:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r1m:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker WithHideLabel play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1u:"
           class="LabelWithHelp_label__59tP-  LabelWithHelp_srOnly__uWL7Z"
           for="datepickerInputId-:r1t:"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_date_container__1t6qM ">
      <input id="datepickerInputId-:r1t:"
             class="DatePicker_input__vz7zh"
             placeholder="Velg"
             value
      >
      <button class="DatePicker_calendarButton__6sCKL"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r1v:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r1v:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r1s:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker WithPlaceholderEmpty play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r26:"
           class="LabelWithHelp_label__59tP-"
           for="datepickerInputId-:r25:"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_date_container__1t6qM ">
      <input id="datepickerInputId-:r25:"
             class="DatePicker_input__vz7zh"
             value
      >
      <button class="DatePicker_calendarButton__6sCKL"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r27:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r27:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r24:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker WithReadOnly play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2a:"
           class="LabelWithHelp_label__59tP-"
           for="datepickerInputId-:r29:"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_date_container__1t6qM ">
      <input id="datepickerInputId-:r29:"
             class="DatePicker_input__vz7zh"
             placeholder="Velg"
             readonly
             value="01.01.2001"
      >
    </div>
    <div id="datepickerErrorId-:r28:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker WithRef play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2:"
           class="LabelWithHelp_label__59tP-"
           for="datepickerInputId-:r1:"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_date_container__1t6qM ">
      <input id="datepickerInputId-:r1:"
             class="DatePicker_input__vz7zh"
             placeholder="Velg"
             value
             name="dummyNameForwardedFromRef"
      >
      <button class="DatePicker_calendarButton__6sCKL"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r3:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r3:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r0:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker WithRequired play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r13:"
           class="LabelWithHelp_label__59tP-"
           for="datepickerInputId-:r12:"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_date_container__1t6qM ">
      <input id="datepickerInputId-:r12:"
             class="DatePicker_input__vz7zh"
             placeholder="Velg"
             required
             value
      >
      <button class="DatePicker_calendarButton__6sCKL"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r14:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r14:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r11:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker WithRequiredAndMark smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r17:"
           class="LabelWithHelp_label__59tP- LabelWithHelp_label_required__KSuzW"
           for="datepickerInputId-:r16:"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_date_container__1t6qM ">
      <input id="datepickerInputId-:r16:"
             class="DatePicker_input__vz7zh"
             placeholder="Velg"
             required
             value
      >
      <button class="DatePicker_calendarButton__6sCKL"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r18:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r18:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:r15:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker WithValue play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rr:"
           class="LabelWithHelp_label__59tP-"
           for="datepickerInputId-:rq:"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_date_container__1t6qM ">
      <input id="datepickerInputId-:rq:"
             class="DatePicker_input__vz7zh"
             placeholder="Velg"
             value="01.01.2001"
      >
      <button class="DatePicker_calendarButton__6sCKL"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rs:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rs:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:rp:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/DatePicker WithVariantLarge smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rj:"
           class="LabelWithHelp_label__59tP-"
           for="datepickerInputId-:ri:"
    >
      Fødselsdato
    </label>
    <div class="DatePicker_date_container__1t6qM ">
      <input id="datepickerInputId-:ri:"
             class="DatePicker_input__vz7zh DatePicker_input_large__ynP5U"
             placeholder="Velg"
             value
      >
      <button class="DatePicker_calendarButton__6sCKL DatePicker_calendarButton_large__3mcID"
              aria-expanded="false"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz DatePicker_icon__ykYkn"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rk:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rk:">
            Velg dato
          </title>
          <path d="M19 19H5V8h14v11ZM16 1v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1h-2Zm1 11h-5v5h5v-5Z">
          </path>
        </svg>
      </button>
    </div>
    <div id="datepickerErrorId-:rh:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;
